added my first simple

--- a/index.html
+++ b/index.html
@@ -4,8 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <div>
+        <h2>My first webstie </h2>
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ab enim laboriosam natus quaerat eum. At quidem in, quisquam illum laborum voluptatum fuga alias ullam, sunt commodi vero voluptates, error labore quis ut doloribus quasi placeat quia dolorum reprehenderit velit doloremque cumque. Ratione voluptatum, eius dolorem quae consequatur animi necessitatibus aperiam.
+        </p>
+    </div>
 </body>
 </html>
